# Talk2

./: README.md
ChatServer/: Server.go  ui_logindialog.h  ui_mainwindow.h  ui_sendfiledialog.h
Talk2Server/: CMakeLists.txt  DB.cpp  DB.h  LoginSvr.cpp  LoginSvr.h  json.hpp  main.cpp
ThreadTest/: README.md  ThreadTest.pro  ThreadTest.pro.user.ea48e8a  logindialog.cpp  logindialog.h  logindialog.ui  mainwindow.cpp  mainwindow.cpp.autosave  mainwindow.h  mainwindow.ui  sendfiledialog.cpp  sendfiledialog.h  sendfiledialog.ui  src.qrc  workthread.cpp  workthread.h
ThreadTest/pb/: LoginServer.pb.cc  LoginServer.pb.h
build-ThreadTest-Desktop_Qt_5_7_0_GCC_64bit-Debug/: Makefile  MyDB.db  ThreadTest  moc_logindialog.cpp  moc_mainwindow.cpp  moc_sendfiledialog.cpp  moc_workthread.cpp  qrc_src.cpp  ui_logindialog.h  ui_mainwindow.h  ui_sendfiledialog.h
